new proj/src/objects/GE_MDM_MDM_Integration_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Contains the MDM integration settings for the Endpoint, Username, and Password, which are used in the web service.  These need to be updated according to which webMethods environment you are using.</description>
    <fields>
        <fullName>Endpoint__c</fullName>
        <description>Enter the webMethods Endpoint.</description>
        <inlineHelpText>Enter the webMethods Endpoint.</inlineHelpText>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>Enter the webMethods Username.</description>
        <inlineHelpText>Enter the webMethods Username.</inlineHelpText>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Enter the webMethods Username.</description>
        <inlineHelpText>Enter the webMethods Username.</inlineHelpText>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GE MDM - MDM Integration Settings</label>
</CustomObject>